feat: production readiness improvements
SECURITY:
- JWT secret validation at startup (must be set via env var, min 32 chars)
- TenantContext: extract tenantId from JWT only, disable X-Tenant-Id header injection
- CORS origins externalized to CORS_ALLOWED_ORIGINS env var (no hardcoded IPs)
- Nginx rate limiting enabled (50 burst, 20 conns)
- GlobalExceptionHandler: production returns generic error, no stack traces
- Swagger UI only accessible in dev profile
- Logging level set to INFO (not DEBUG)
- Spring profile defaults to prod

AUTH:
- Refresh token mechanism: /api/auth/refresh endpoint
- Access token auto-refresh on 401 in frontend request interceptor
- Concurrent refresh queue to avoid duplicate refresh calls
- LoginResponse includes refreshToken field

FEATURES:
- User registration: POST /api/auth/register with email/username uniqueness check
- Frontend RegisterPage with password complexity validation
- Subscription system: plan/subscription/api_usage tables
- PlanController: GET /api/plans
- SubscriptionController: GET/POST/PUT /api/subscription/*
- PricingPage with Free/Pro/Enterprise plan cards

OPS:
- ErrorBoundary component wrapping entire React app
- Prometheus metrics via micrometer-registry-prometheus
- Actuator endpoints: health,prometheus,metrics
- Backup script for PostgreSQL and MinIO
- Deploy workflow for production (needs SSH secrets configured)
- CI workflow: JDK 17 (not 21), build + test + Docker image